fix register page ring on mobile

--- a/assets/login.css
+++ b/assets/login.css
@@ -175,8 +175,9 @@ body {
 @media (max-width: 576px) {
   .ring {
     width: 90vw;
-    aspect-ratio: 1 / 1;
     padding: 20px;
+    aspect-ratio: auto;
+    height: auto;
   }
   .login {
     width: 100%;
